--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,6 @@
 VITE_MAPBOX_TOKEN=your_mapbox_token_here
 VITE_BACKEND_URL=http://localhost:3001
 VITE_DEMO_MODE=true
+VITE_TOOL_FALLBACK=false
+VITE_CITY=tunis
+VITE_MAPILLARY_TOKEN=
