Update env examples

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,6 +1,7 @@
 VITE_MAPBOX_TOKEN=your_mapbox_token_here
 VITE_BACKEND_URL=http://localhost:3001
 VITE_DEMO_MODE=true
+VITE_MIC_TEST=false
 VITE_TOOL_FALLBACK=false
 VITE_CITY=tunis
 VITE_MAPILLARY_TOKEN=
