--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,6 +3,6 @@ PORT=3001
 CORS_ORIGINS=http://localhost:3000
 OPENVERSE_API_URL=https://api.openverse.org/v1/images
 OPENVERSE_LICENSE_TYPE=all
-PEXELS_API_KEY=
+PEXELS_API_KEY=your_pexels_api_key_here
 PEXELS_API_URL=https://api.pexels.com/v1/search
 PHOTO_PROVIDER=auto
