Add media overlay and improve video matching

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,4 +5,6 @@ OPENVERSE_API_URL=https://api.openverse.org/v1/images
 OPENVERSE_LICENSE_TYPE=all
 PEXELS_API_KEY=your_pexels_api_key_here
 PEXELS_API_URL=https://api.pexels.com/v1/search
+PEXELS_VIDEO_API_URL=https://api.pexels.com/videos/search
 PHOTO_PROVIDER=auto
+VIDEO_PROVIDER=pexels
